--- a/settings.org
+++ b/settings.org
@@ -6,7 +6,7 @@
 This document serves as my primary emacs configuration file; it uses
 [[http://orgmode.org/worg/org-contrib/babel/][org-babel]] to mix documentation and code in the same file. I chose this
 approach because my ~init.el~ file was beginning to get large and
-unweildy, and because I was starting to forget the details of why and
+unwieldy, and because I was starting to forget the details of why and
 how I had configured things.
 
 This document hasn't entirely done away with ~init.el~. The version of
@@ -25,58 +25,51 @@ Installation of these configuration files is simple. If you're not me,
 * Install packages at startup if needed
 
 #+BEGIN_SRC emacs-lisp
-  ;; Set up the melpa package repository
-  (require 'package)
-  (setq package-user-dir "~/.emacs.d/elpa/")
-  (add-to-list 'package-archives
-               '("melpa" . "http://melpa.milkbox.net/packages/") t)
-  (package-initialize)
-  (when (not package-archive-contents)
-    (package-refresh-contents))
+    ;; Set up the melpa package repository
+    (require 'package)
+    (setq package-user-dir "~/.emacs.d/elpa/")
+    (add-to-list 'package-archives
+                 '("melpa" . "http://melpa.milkbox.net/packages/") t)
+    (package-initialize)
+    (when (not package-archive-contents)
+      (package-refresh-contents))
 
-  ;; packages to install
-  (defvar my-packages '(exec-path-from-shell
-                        better-defaults
-                        ido-ubiquitous
-                        smex
-                        paredit
-                        ess
-                        o-blog
-                        graphviz-dot-mode
-                        auctex-latexmk
-                        tangotango-theme
-                        auto-complete
-                        markdown-mode
-                        markdown-mode+
-                        auctex
-                        haskell-mode
-                        ghc
-                        ghci-completion
-                        hi2
-                        cider
-                        scion
-                        pandoc-mode
-                        ox-pandoc
-                        polymode
-                        outshine
-                        magit
-                        sx)
-    "A list of packages to ensure are installed at launch.")
+    ;; packages to install
+    (defvar my-packages '(use-package
+                          exec-path-from-shell
+                          better-defaults
+                          ido-ubiquitous
+                          smex
+                          paredit
+                          graphviz-dot-mode
+                          tangotango-theme
+                          auto-complete
+                          markdown-mode
+                          markdown-mode+
+                          haskell-mode
+                          ghc
+                          ghci-completion
+                          cider
+                          scion
+                          pandoc-mode
+                          magit
+                          sx)
+      "A list of packages to ensure are installed at launch.")
 
-  ;; Iterate list of packages and install
-  (dolist (p my-packages)
-    (when (not (package-installed-p p))
-      (package-install p)))
+    ;; Iterate list of packages and install
+    (dolist (p my-packages)
+      (when (not (package-installed-p p))
+        (package-install p)))
 #+END_SRC
 
-* OSX path fix
-OSX paths have been broken on and off due to the way profile
+* Path fix
+Paths have been broken on and off due to the way profile
 information is stored both in Apple netinfo database as well as in the
 more traditional locations. This makes things sane again.
 
 #+BEGIN_SRC emacs-lisp
-  (when (memq window-system '(mac ns))
-    (exec-path-from-shell-initialize))
+  (when window-system
+    (exec-path-from-shell-copy-env "PATH"))
 #+END_SRC
 
 * Aesthetics and behaviors
@@ -93,6 +86,12 @@ also been known to dabble in solarized for Solaris nostalgia reasons.
   ;; (load-theme 'twilight t)               ; twilight is dark
   (load-theme 'tangotango t)              ; tangotango is also dark
 #+END_SRC
+
+** Focus follows mouse
+Match the behavior of my beloved XMonad.
+#+BEGIN_SRC emacs-lisp
+  (setq mouse-autoselect-window t)
+#+END_SRC
 ** Disable welcome screen
 #+BEGIN_SRC emacs-lisp
   (setq inhibit-startup-message t)
@@ -104,7 +103,7 @@ before installing).
 
 #+BEGIN_SRC emacs-lisp
 ;; Default font
-(set-face-attribute 'default nil :family "Source Code Pro" :height 110)
+(set-face-attribute 'default nil :family "Terminus" :height 110)
 #+END_SRC
 
 ** Default window size
@@ -277,7 +276,23 @@ Set some /global/ keybindings and parameters for org-mode.
 
 * ESS - Emacs Speaks Statistics (R, Julia)
 #+BEGIN_SRC emacs-lisp
-  (require 'ess-site) ; load the package
+  (use-package ess
+               :ensure t
+               :init
+               (require 'ess-site)
+               (add-hook 'ess-mode-hook
+                         (lambda ()
+                           (setq tab-width 2)
+                           (ess-toggle-underscore nil)
+                           (electric-pair-mode 1)
+                           (local-set-key (kbd "<C-right") 'paredit-forward-slurp-sexp)
+                           (setq electric-pair-inhibit-predicate
+                                 `(lambda (c)
+                                    (if (char-equal c ?\<)
+                                        t
+                                      (,electric-pair-inhibit-predicate c)))))))
+
+
 #+END_SRC
 ** R
 Fix indentation when using fun operators like ~+~ with ggplot and ~%>~ from =magrittr=.
@@ -302,17 +317,20 @@ be revisited, as its been a while since I've looked into the "right"
 way of doing things.
 
 #+BEGIN_SRC emacs-lisp
-(setq
- python-shell-interpreter "ipython"
- python-shell-interpreter-args ""
- python-shell-prompt-regexp "In \\[[0-9]+\\]: "
- python-shell-prompt-output-regexp "Out\\[[0-9]+\\]: "
- python-shell-completion-setup-code
-   "from IPython.core.completerlib import module_completion"
- python-shell-completion-module-string-code
-   "';'.join(module_completion('''%s'''))\n"
- python-shell-completion-string-code
-   "';'.join(get_ipython().Completer.all_completions('''%s'''))\n")
+  (setq
+   python-shell-interpreter "ipython"
+   python-shell-interpreter-args "--simple-prompt")
+
+  ;; Fix for emacs pre 25.2
+  (with-eval-after-load 'python
+    (defun python-shell-completion-native-try ()
+      "Return non-nil if can trigger native completion."
+      (let ((python-shell-completion-native-enable t)
+            (python-shell-completion-native-output-timeout
+             python-shell-completion-native-try-output-timeout))
+        (python-shell-completion-native-get-completions
+         (get-buffer-process (current-buffer))
+         nil "_"))))
 #+END_SRC
 * Haskell
 Configure Haskell.
