--- a/settings.org
+++ b/settings.org
@@ -238,19 +238,18 @@ Set some /global/ keybindings and parameters for org-mode.
   (use-package ess
                :ensure t
                :bind
-               (("C-<right>" . paredit-forward-slurp-sexpr))
+               (("C-<right>" . paredit-forward-slurp-sexp)
+                ("C-<left>" . paredit-forward-barf-sexp))
                :init
-               (setq ess-offset-arguments 'prev-line)
-               (setq tab-width 2)
+               (require 'ess-site)
+               (setq ess-default-style 'RStudio-)
                (setq ess-smart-S-assign-key "<")
                (electric-pair-mode 1)
                (setq electric-pair-inhibit-predicate
                      `(lambda (c)
                         (if (char-equal c ?\<)
                             t
-                          (,electric-pair-inhibit-predicate c))))
-               :config
-               (ess-set-style 'RStudio))
+                          (,electric-pair-inhibit-predicate c)))))
 
 
 #+END_SRC
