--- a/settings.org
+++ b/settings.org
@@ -29,7 +29,7 @@ Installation of these configuration files is simple. If you're not me,
   (require 'package)
   (setq package-user-dir "~/.emacs.d/elpa/")
   (add-to-list 'package-archives
-               '("melpa" . "http://melpa.milkbox.net/packages/") t)
+               '("melpa" . "https://melpa.org/packages/") t)
   (package-initialize)
   (when (not package-archive-contents)
     (package-refresh-contents))
